2004-08-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: Fixed [SF Tcllib Bug 1003671]: Ensured that
	* tree.test:  (de)serialization of empty graph/tree is
	* graph.tcl:  working properly. Thanks to Bhushit Joshipura
	* tree.tcl:   <bhushit@users.sf.net> for the report.

2004-08-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: Fixed [SF Tcllib Bug 1000716]: Unset of last
	* tree.test:  attribute followed by delete does not result
	* graph.tcl:  in error anymore. Thanks to Brian Theado
	* tree.tcl:   <btheado@users.sf.net> for both report and fix.

2004-06-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* matrix.tcl (_search): Fixed bug reported by Joachim Kock
	  <kock@math.uqam.ca>, using his fix. Search went into an infinite
	  loop if -nocase was used.
	* matrix.test: Added a testcase.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tcl: Typo police. No functional changes.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.tcl (split): New method, like 'filter', but returns lists
	* list.test:        of both passing and failing elements. Extended
	* struct_list.man:  both testsuite and documentation.

2004-02-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.tcl (assign): Synchronized API to Tcl 8.5 lassign.
	* struct_list.man:

	* list.test: Added conditionals for version dependent results.

2004-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man:  Added new method 'arc attr' ad 'node attr' to
	* graph.tcl:  the graph data structure. They serve the same